--- a/day14/practice(遮罩层).html
+++ b/day14/practice(遮罩层).html
@@ -21,7 +21,7 @@
             opacity: .8 !important;
         }
 
-        .sign{
+        .sign {
             display: none;
             position: relative;
             border: 1px solid #000;
@@ -38,7 +38,7 @@
     <input type="button" value="登录" onclick="show()">
     <div class="mask"></div>
     <div class="sign">
-        <a href="javascript:void(0)">关闭</a>
+        <a href="javascript:void(0)" onclick="close1()">关闭</a>
         <input type="text"><br>
         <input type="text"><br>
         <input type="submit">
@@ -46,12 +46,23 @@
     <script src="../jQuery/jquery-3.4.1.min.js">
     </script>
     <script>
-        function show(){
-            console.log(1)
+        function show() {
             $('.mask').css({
-                'display':'block',
-                'width':`${document.scrollwidth}px`,
-                'height':`${document.scrollheight}px`
+                'display': 'block',
+                'width': `100%`,
+                'height': `100%`
+            })
+
+                ; $('.sign').css({
+                    'display': 'block',
+                })
+
+        }
+
+
+        function close1() {
+            $('.sign,.mask').css({
+                'display': 'none',
             })
         }
 
