--- a/ajax/ajax1.html
+++ b/ajax/ajax1.html
@@ -20,7 +20,11 @@
 
     //get 好处：便于分享网址    数据暴露    数据不能太多
 
-    //post  
+    //post  好处：以json的方式传递的  相对安全  数据理论上说是无限的
+
+    //let xhr = new XMLHttpRequst()
+
+    
 
 <script src="../jQuery/jquery-3.4.1.min.js">
 </script>
