--- a/购物车和注册页面/myCart.html
+++ b/购物车和注册页面/myCart.html
@@ -203,7 +203,7 @@
                 let htm = $(".cart_td_4").html();
                 let danjia = $(".cart_td_5").html();
                 let shulinag  = $(".cart_td_6 input").val();
-                console.log(htm,danjia,shulinag)
+                console.log(htm,danjia,shulinag);
                 
             }
             zongshu();
