--- a/h5/h5(05)dataTransfer改变鼠标样式.html
+++ b/h5/h5(05)dataTransfer改变鼠标样式.html
@@ -86,6 +86,10 @@
             this.appendChild(div);
             document.body.removeChild(box);
           }
+
+
+          //用图片替换影子
+          //    e.dataTransger,setDragImage
     </script>
 </body>
 </html>
